--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,6 +15,7 @@ jobs:
         run: |
           # Your ML workflow goes here
           pip install -r requirements.txt
+          pip install mindaffectBCI
           python mindaffectBCI/decoder/analyse_datasets.py
           depth = 5
           
