--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -4,9 +4,8 @@ on: [push]
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 5
+    runs-on: [ubuntu-latest]
+    container: docker://dvcorg/cml-py3:latest
 
     steps:
     - uses: actions/checkout@v3
